--- a/Patientdata/Timeline/styles.css
+++ b/Patientdata/Timeline/styles.css
@@ -1,7 +1,8 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f0f8ff;
+    background-color: #002342;
+    color: white;
     margin: 0;
     padding: 0;
 }
